# block-sdtw

./: .gitignore  CITATION.cff  README.md  block_sdtw.py  citations.md  computation_evaluation.py  computation_plot.py  dataset.py  dataset_UCRA_Archive.py  model.py  otw.py  plot_results.py  plot_results_prediction.py  pyproject.toml  sdtw_vs_block.py  test_block_implementation.py  train.py  train_V1.py  train_V2.py  train_V2_UCR_timeseries.py  train_V3_UCR_timeseries.py  train_V3_UCR_timeseries.sh
.github/workflows/: deploy-docs.yml  main.yml  python-publish.yml  (+3 more)
benchmark/: README.md  block_optimized_vs_naive_compute.py  block_optimized_vs_naive_plot.py  compute_block_optimized_vs_naive.py  compute_sdtw_implementations.py  compute_sdtw_vs_block.py  plot_block_optimized_vs_naive.py  plot_sdtw_implementations.py  plot_sdtw_vs_block.py
computation_stats/: comparison_average_error_prediction_SDTW_vs_Pruned_vs_Block_computation.py  comparison_average_error_prediction_SDTW_vs_Pruned_vs_Block_plot.py  comparison_avg_error_prediction_computation_V1.py  comparison_avg_error_prediction_computation_V2.py  comparison_avg_error_prediction_plot.py  comparison_avg_error_prediction_plot_V2.py  comparison_avg_error_prediction_plot_V2_csv.py  comparison_avg_error_prediction_plot_V2_hist.py  evaluation_1.py  evaluation_2.py  evaluation_2_performance_vs_signal_length.py  evaluation_3.py  evaluation_4.py  evaluation_4_performance_vs_batch_size.py  evaluation_5_block_naive_vs_block_optimized.py  evaluation_5_block_vs_block_optimized.py  evaluation_6_block_naive_vs_block_optimized_vs_SDTW.py  plot_2.py  plot_3.py  plot_4.py  plot_5.py  plot_6.py  run_script.sh
dtw_loss_functions/: __init__.py  benchmark.py  block_dtw.py  otw.py  soft_dtw.py
other_analysis/: create_csv_ucr_datasets_descriptions.py  create_fig_matrix_path_for_paper.py  create_fig_matrix_path_for_paper_V2.py  loss_vs_frequency_shift.py  loss_vs_frequency_shift_percentage.py  loss_vs_n_of_block.py
saved_model/: model_MSE.pth  model_MSE_serialized.pth  model_SDTW.pth  model_SDTW_serialized.pth  model_block_SDTW.pth  model_block_SDTW_serialized.pth  model_details.txt
src/: block_dtw.py  otw.py
test/: README.md  block_optimized_vs_naive.py  sdtw_implementations.py
(+1179 files in other folders)
