[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["/src"]

[tool.hatch.build.targets.wheel.sources]
"src" = "dtw_loss_function"

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

[project]
name = "DTW_loss_function"
version = "1.0"
license = "Apache-2.0"
authors = [
  { name = "Alberto (Jesus) Zancanaro", email = "alberto.zancanaro.1@gmail.com" },
]
description = "Torch implementation of the Block DTW loss function"
dependencies = [
	"numpy",
	"numba",
	"toml",
    "torch",
]
[project.optional-dependencies]
extra = [
]
