[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dtw_loss_functions"]

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

[project]
name = "dtw_loss_functions"
version = "1.0.1"
license = "Apache-2.0"
authors = [
  { name = "Alberto (Jesus) Zancanaro", email = "alberto.zancanaro.1@gmail.com" },
]
description = "Torch implementation of various DTW inpsired loss functions"
dependencies = [
	"numba",
	"toml",
    "torch",
]
readme = "README.md"
[project.optional-dependencies]
extra = [
]
