[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dtw_loss_functions"]

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

[project]
name = "dtw_loss_functions"
version = "1.0.4"
license = "Apache-2.0"
authors = [
  { name = "Alberto (Jesus) Zancanaro", email = "alberto.zancanaro.1@gmail.com" },
]
description = "Torch implementation of various DTW inpsired loss functions"
dependencies = [
	"matplotlib",
	"numba",
	"pysdtw",
	"toml",
    "torch",
]
readme = "README.md"

[project.optional-dependencies]
extra = [
]

[project.urls]
Homepage = "https://github.com/jesus-333/dtw_loss_functions"
Documentation = "https://jesus-333.github.io/dtw_loss_functions_documentation/"
Repository = "https://github.com/jesus-333/dtw_loss_functions"
"Bug Tracker" = "https://github.com/jesus-333/dtw_loss_functions/issues"
